--- a/Team_player_data/datacleanup.ipynb
+++ b/Team_player_data/datacleanup.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1601680546688",
+   "name": "python_defaultSpec_1601682544342",
    "display_name": "Python 3.6.10 64-bit"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -64,7 +64,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>80</th>\n      <td>2019</td>\n      <td>Liverpool</td>\n      <td>82</td>\n      <td>40</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>2019</td>\n      <td>Manchester City</td>\n      <td>57</td>\n      <td>33</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>87</th>\n      <td>2019</td>\n      <td>Leicester City</td>\n      <td>53</td>\n      <td>30</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>2019</td>\n      <td>Chelsea</td>\n      <td>48</td>\n      <td>22</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>2019</td>\n      <td>Manchester United</td>\n      <td>45</td>\n      <td>29</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 13
     }
    ],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -128,7 +128,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>92</th>\n      <td>2019</td>\n      <td>Juventus</td>\n      <td>63</td>\n      <td>31</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>2019</td>\n      <td>SS Lazio</td>\n      <td>62</td>\n      <td>39</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>2019</td>\n      <td>FC Internazionale Milano</td>\n      <td>54</td>\n      <td>23</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>2019</td>\n      <td>Atalanta</td>\n      <td>48</td>\n      <td>33</td>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>2019</td>\n      <td>AS Roma</td>\n      <td>45</td>\n      <td>26</td>\n      <td>19</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -158,7 +158,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>95</th>\n      <td>2019</td>\n      <td>FC Barcelona</td>\n      <td>58</td>\n      <td>45</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>2019</td>\n      <td>Real Madrid</td>\n      <td>56</td>\n      <td>27</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>2019</td>\n      <td>Sevilla FC</td>\n      <td>47</td>\n      <td>19</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>2019</td>\n      <td>Getafe CF</td>\n      <td>46</td>\n      <td>21</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>2019</td>\n      <td>Real Sociedad</td>\n      <td>46</td>\n      <td>27</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +179,9 @@
     "    players_df = players_df.rename({\"club\":\"Teams\"},axis=1)\n",
     "    f = {\"age\":\"mean\", \"height_cm\":\"mean\",\"weight_kg\":\"mean\",\"overall\":\"mean\",\"value_eur\":\"mean\"}\n",
     "    players_df = players_df.groupby(\"Teams\").agg(f)\n",
-    "    players_df[\"Year\"]= year\n",
-    "    players_df[\"Year\"] = players_df[\"Year\"].astype('int')\n",
+    "    players_df[\"Year\"]= int(year)\n",
     "    players_df = players_df.reset_index()\n",
-    "    return players_df\n",
+    "    return cleanup(players_df)\n",
     "def cleanup(df):\n",
     "    df[\"Teams\"] = df[\"Teams\"].str.replace(\"RC Celta\", \"RC Celta Vigo\")\n",
     "    df[\"Teams\"] = df[\"Teams\"].str.replace(\"Real Sporting de Gijón\", \"Sporting Gijón\")\n",
@@ -203,25 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "players_df_2015 = playersfunc(path_2015,2015)\n",
-    "players_df_2015 = cleanup(players_df_2015)\n",
     "players_df_2016 = playersfunc(path_2016,2016)\n",
-    "players_df_2016 = cleanup(players_df_2016)\n",
     "players_df_2017 = playersfunc(path_2017,2017)\n",
-    "players_df_2017 = cleanup(players_df_2017)\n",
     "players_df_2018 = playersfunc(path_2018,2018)\n",
-    "players_df_2018 = cleanup(players_df_2018)\n",
-    "players_df_2019 = playersfunc(path_2019,2019)\n",
-    "players_df_2019 = cleanup(players_df_2019)"
+    "players_df_2019 = playersfunc(path_2019,2019)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -255,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +261,7 @@
     "    df[\"weight_kg\"] = df[\"weight_kg\"].map(lambda x: round(x,2))\n",
     "    df[\"overall\"] = df[\"overall\"].map(lambda x: round(x,2))\n",
     "    df[\"value_eur\"] = df[\"value_eur\"].astype('int').map(lambda x: round(x))\n",
-    "spain_df = spain_df.rename(columns={\"age\": \"avg age\",\"height_cm\":\"avg heights (cm)\",\"weight_kg\":\"avg weight (kg)\",\"overall\":\"agv player rating\",\"value_eur\": \"avg player value (EU)\"})\n",
-    "it_df = it_df.rename(columns={\"age\": \"avg age\",\"height_cm\":\"avg heights (cm)\",\"weight_kg\":\"avg weight (kg)\",\"overall\":\"agv player rating\",\"value_eur\": \"avg player value (EU)\"})\n",
-    "eng_df = eng_df.rename(columns={\"age\": \"avg age\",\"height_cm\":\"avg heights (cm)\",\"weight_kg\":\"avg weight (kg)\",\"overall\":\"agv player rating\",\"value_eur\": \"avg player value (EU)\"})"
+    "    df.rename(columns={\"age\": \"avg age\",\"height_cm\":\"avg heights (cm)\",\"weight_kg\":\"avg weight (kg)\",\"overall\":\"agv player rating\",\"value_eur\": \"avg player value (EU)\"},inplace=True)"
    ]
   },
   {
