Finalised files for analysis

--- a/Transfer_data.ipynb
+++ b/Transfer_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = [2013,2014,2015,2016,2017,2018,2019]\n",
+    "# creating lists to use for later looping\n",
+    "years = [2013,2014, 2015,2016,2017,2018,2019]\n",
     "leagues = [\"english_premier_league\",\"italian_serie_a\",\"spanish_primera_division\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +31,18 @@
     "def data_org(league):\n",
     "    appended_data = []\n",
     "    for year in years:\n",
-    "        file_path=f\"../transfers/data/{year}/{league}.csv\"\n",
+    "        file_path=f\"transfers_data/data/{year}/{league}.csv\"\n",
     "        df_league = pd.read_csv(file_path)\n",
     "        appended_data.append(df_league)\n",
     "    new_df = pd.concat(appended_data)\n",
+    "    new_df = new_df[[\"year\",\"club_name\",\"transfer_movement\",\"fee_cleaned\"]]\n",
+    "    new_df = new_df[new_df[\"transfer_movement\"]=='in']\n",
     "    return new_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,34 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cleaning to only include relevant columns\n",
-    "italian_clean_df = italian_df[[\"year\",\"club_name\",\"transfer_movement\",\"fee_cleaned\"]]\n",
-    "english_clean_df = premier_league_df[[\"year\",\"club_name\",\"transfer_movement\",\"fee_cleaned\"]]\n",
-    "spanish_clean_df = spanish_df[[\"year\",\"club_name\",\"transfer_movement\",\"fee_cleaned\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filtering to show only players signed, not players sold.\n",
-    "italian_clean_df = italian_clean_df[italian_clean_df[\"transfer_movement\"]=='in']\n",
-    "english_clean_df = english_clean_df[english_clean_df[\"transfer_movement\"]=='in']\n",
-    "spanish_clean_df = spanish_clean_df[spanish_clean_df[\"transfer_movement\"]=='in']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Creating a function that formats the dataframes to suit requirements for analysis\n",
     "def group_and_clean(df):\n",
     "    df_group = df.groupby([\"year\",\"club_name\"]).sum()\n",
     "    df_group = df_group.sort_values(by=[\"year\",\"fee_cleaned\"],ascending=False).rename(columns={\"fee_cleaned\": \"Transfer Spend (Euros)\"}).reset_index()\n",
@@ -88,157 +68,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "italian_summary = group_and_clean(italian_clean_df)\n",
-    "english_summary = group_and_clean(english_clean_df)\n",
-    "spanish_summary = group_and_clean(spanish_clean_df)"
+    "# Applying the function to format our datasets\n",
+    "italian_transfers = group_and_clean(italian_df)\n",
+    "english_transfers = group_and_clean(premier_league_df)\n",
+    "spanish_transfers = group_and_clean(spanish_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function that will be used when calculating the moving average \n",
+    "# In this data set, there are teams that have not been in the league for each year we are working with due to promotion / relegation. \n",
+    "# This function ensures that we are only calculating the Moving Average for teams that have been there for consecutive years.\n",
+    "\n",
+    "def year_test(time):\n",
+    "    count = 0\n",
+    "    length = len(time) - 1\n",
+    "    outcome = \"False\"\n",
+    "    # Using the difference between years to determine if they are sequential.\n",
+    "    for year1, year2 in zip(time,time[1:]):\n",
+    "        total = year2 - year1\n",
+    "        count += total\n",
+    "    if length == count:\n",
+    "        outcome = \"True\"\n",
+    "    return outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to calculate the moving average (MA)\n",
+    "def moving_average(df):\n",
+    "    # empty list to store our dataframes\n",
+    "    append_team = []\n",
+    "    \n",
+    "    # sorting values by Team and then year to allow average to calculate\n",
+    "    df = df.sort_values(by=[\"Teams\",\"year\"], ascending = True)\n",
+    "    \n",
+    "    # generating a unique list of the teams\n",
+    "    teams = df[\"Teams\"].unique().tolist()\n",
+    "\n",
+    "    for team in teams:\n",
+    "        # filtering on an individual team to create their 3yr MA\n",
+    "        team_df = df[df[\"Teams\"]==team]\n",
+    "        years = team_df[\"year\"].tolist()\n",
+    "        if year_test(years) == \"True\":\n",
+    "            # using 'rolling' function to create MA\n",
+    "            team_df[\"MA\"] = team_df.iloc[:,2].rolling(window=3,min_periods = 3).mean().round(2)\n",
+    "            team_df = team_df[[\"year\",\"Teams\",\"MA\"]]\n",
+    "            append_team.append(team_df)\n",
+    "    team_list = pd.concat(append_team)\n",
+    "    \n",
+    "    #joining the dataframes\n",
+    "    team_join = pd.merge(df,team_list,how = \"outer\",on=[\"year\",\"Teams\"])\n",
+    "    team_join = team_join.fillna(value =\"0\")\n",
+    "    return team_join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>Teams</th>\n",
-       "      <th>Transfer Spend (Euros)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>Real Madrid</td>\n",
-       "      <td>317.250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>FC Barcelona</td>\n",
-       "      <td>245.700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>Atlético Madrid</td>\n",
-       "      <td>219.150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>Sevilla FC</td>\n",
-       "      <td>159.980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>Real Betis Balompié</td>\n",
-       "      <td>90.230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>RCD Espanyol Barcelona</td>\n",
-       "      <td>0.675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Elche CF</td>\n",
-       "      <td>0.585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Levante UD</td>\n",
-       "      <td>0.270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>Rayo Vallecano</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>UD Almería</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>140 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     year                   Teams  Transfer Spend (Euros)\n",
-       "0    2019             Real Madrid                 317.250\n",
-       "1    2019            FC Barcelona                 245.700\n",
-       "2    2019         Atlético Madrid                 219.150\n",
-       "3    2019              Sevilla FC                 159.980\n",
-       "4    2019     Real Betis Balompié                  90.230\n",
-       "..    ...                     ...                     ...\n",
-       "135  2013  RCD Espanyol Barcelona                   0.675\n",
-       "136  2013                Elche CF                   0.585\n",
-       "137  2013              Levante UD                   0.270\n",
-       "138  2013          Rayo Vallecano                   0.000\n",
-       "139  2013              UD Almería                   0.000\n",
-       "\n",
-       "[140 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
     }
    ],
    "source": [
-    "spanish_summary"
+    "# Applying MA function to each league\n",
+    "spanish_summary = moving_average(spanish_transfers)\n",
+    "english_summary = moving_average(english_transfers)\n",
+    "italian_summary = moving_average(italian_transfers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cleaning Italian Data\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"\\s$\",\"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"\\s+FC\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"\\s+BC\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"\\s+CFC\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"^\\s?UC\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"^\\s?US\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"^\\s?SSC\\s?\", \"\")\n",
+    "italian_summary[\"Teams\"] = italian_summary[\"Teams\"].str.replace(\"^\\s?\",\"\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cleaning English Data\n",
+    "english_summary[\"Teams\"] = english_summary[\"Teams\"].str.replace(\"\\s$\",\"\")\n",
+    "english_summary[\"Teams\"] = english_summary[\"Teams\"].str.replace(\"\\s+FC\", \"\")\n",
+    "english_summary[\"Teams\"] = english_summary[\"Teams\"].str.replace(\"\\s+AFC\", \"\")\n",
+    "english_summary[\"Teams\"] = english_summary[\"Teams\"].str.replace(\"^AFC\\s\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Outputting data to CSV\n",
+    "italian_summary.to_csv(\"transfers_output/italian_transfers.csv\")\n",
+    "english_summary.to_csv(\"transfers_output/english_transfers.csv\")\n",
+    "spanish_summary.to_csv(\"transfers_output/spanish_transfers.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -257,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
