--- a/Team_player_data/datacleanup.ipynb
+++ b/Team_player_data/datacleanup.ipynb
@@ -1,25 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1601682544342",
-   "display_name": "Python 3.6.10 64-bit"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -53,18 +32,97 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "['ENG' 'ESP' 'FR' 'GER' 'IT']\n"
+     "output_type": "stream",
+     "text": [
+      "['ENG' 'ESP' 'FR' 'GER' 'IT']\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "    Year              Teams  Points  Goals+  Goals-\n80  2019          Liverpool      82      40      12\n96  2019    Manchester City      57      33      12\n87  2019     Leicester City      53      30      15\n98  2019            Chelsea      48      22      15\n89  2019  Manchester United      45      29      12",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>80</th>\n      <td>2019</td>\n      <td>Liverpool</td>\n      <td>82</td>\n      <td>40</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>2019</td>\n      <td>Manchester City</td>\n      <td>57</td>\n      <td>33</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>87</th>\n      <td>2019</td>\n      <td>Leicester City</td>\n      <td>53</td>\n      <td>30</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>2019</td>\n      <td>Chelsea</td>\n      <td>48</td>\n      <td>22</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>2019</td>\n      <td>Manchester United</td>\n      <td>45</td>\n      <td>29</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Teams</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Goals+</th>\n",
+       "      <th>Goals-</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>82</td>\n",
+       "      <td>40</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>57</td>\n",
+       "      <td>33</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>53</td>\n",
+       "      <td>30</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>48</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Manchester United</td>\n",
+       "      <td>45</td>\n",
+       "      <td>29</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year              Teams  Points  Goals+  Goals-\n",
+       "80  2019          Liverpool      82      40      12\n",
+       "96  2019    Manchester City      57      33      12\n",
+       "87  2019     Leicester City      53      30      15\n",
+       "98  2019            Chelsea      48      22      15\n",
+       "89  2019  Manchester United      45      29      12"
+      ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,13 +180,90 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "    Year                     Teams  Points  Goals+  Goals-\n92  2019                  Juventus      63      31      10\n93  2019                  SS Lazio      62      39      10\n89  2019  FC Internazionale Milano      54      23      10\n94  2019                  Atalanta      48      33      19\n84  2019                   AS Roma      45      26      19",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>92</th>\n      <td>2019</td>\n      <td>Juventus</td>\n      <td>63</td>\n      <td>31</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>2019</td>\n      <td>SS Lazio</td>\n      <td>62</td>\n      <td>39</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>2019</td>\n      <td>FC Internazionale Milano</td>\n      <td>54</td>\n      <td>23</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>2019</td>\n      <td>Atalanta</td>\n      <td>48</td>\n      <td>33</td>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>2019</td>\n      <td>AS Roma</td>\n      <td>45</td>\n      <td>26</td>\n      <td>19</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Teams</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Goals+</th>\n",
+       "      <th>Goals-</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Juventus</td>\n",
+       "      <td>63</td>\n",
+       "      <td>31</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>SS Lazio</td>\n",
+       "      <td>62</td>\n",
+       "      <td>39</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>FC Internazionale Milano</td>\n",
+       "      <td>54</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Atalanta</td>\n",
+       "      <td>48</td>\n",
+       "      <td>33</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>AS Roma</td>\n",
+       "      <td>45</td>\n",
+       "      <td>26</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year                     Teams  Points  Goals+  Goals-\n",
+       "92  2019                  Juventus      63      31      10\n",
+       "93  2019                  SS Lazio      62      39      10\n",
+       "89  2019  FC Internazionale Milano      54      23      10\n",
+       "94  2019                  Atalanta      48      33      19\n",
+       "84  2019                   AS Roma      45      26      19"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -152,13 +287,90 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "    Year          Teams  Points  Goals+  Goals-\n95  2019   FC Barcelona      58      45      12\n93  2019    Real Madrid      56      27       9\n96  2019     Sevilla FC      47      19      13\n94  2019      Getafe CF      46      21      13\n97  2019  Real Sociedad      46      27      12",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Teams</th>\n      <th>Points</th>\n      <th>Goals+</th>\n      <th>Goals-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>95</th>\n      <td>2019</td>\n      <td>FC Barcelona</td>\n      <td>58</td>\n      <td>45</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>2019</td>\n      <td>Real Madrid</td>\n      <td>56</td>\n      <td>27</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>2019</td>\n      <td>Sevilla FC</td>\n      <td>47</td>\n      <td>19</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>2019</td>\n      <td>Getafe CF</td>\n      <td>46</td>\n      <td>21</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>2019</td>\n      <td>Real Sociedad</td>\n      <td>46</td>\n      <td>27</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Teams</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Goals+</th>\n",
+       "      <th>Goals-</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>FC Barcelona</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Real Madrid</td>\n",
+       "      <td>56</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Sevilla FC</td>\n",
+       "      <td>47</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Getafe CF</td>\n",
+       "      <td>46</td>\n",
+       "      <td>21</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Real Sociedad</td>\n",
+       "      <td>46</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year          Teams  Points  Goals+  Goals-\n",
+       "95  2019   FC Barcelona      58      45      12\n",
+       "93  2019    Real Madrid      56      27       9\n",
+       "96  2019     Sevilla FC      47      19      13\n",
+       "94  2019      Getafe CF      46      21      13\n",
+       "97  2019  Real Sociedad      46      27      12"
+      ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 15
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -276,5 +488,26 @@
     "eng_df.to_csv(\"cleaned/engranking.csv\")"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
