transfer analysis 90% complete

--- a/Transfer_data.ipynb
+++ b/Transfer_data.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,25 +131,23 @@
     "    \n",
     "    #joining the dataframes\n",
     "    team_join = pd.merge(df,team_list,how = \"outer\",on=[\"year\",\"Teams\"])\n",
-    "    team_join = team_join.fillna(value =\"0\")\n",
     "    return team_join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
      ]
     }
    ],
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +199,13 @@
     "english_summary.to_csv(\"transfers_output/english_transfers.csv\")\n",
     "spanish_summary.to_csv(\"transfers_output/spanish_transfers.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
