--- a/financial_join.ipynb
+++ b/financial_join.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,13 @@
     "    wage[\"Teams\"] = wage[\"Teams\"].apply(lambda x: difflib.get_close_matches(x,transfer[\"Teams\"])[0])\n",
     "    wage[\"Teams\"] = wage[\"Teams\"].str.replace(\"FC Internazionale\",\"Inter Milan\")\n",
     "    joined = pd.merge(wage,transfer,on=[\"Year\",\"Teams\"],how=\"outer\")\n",
+    "    joined = joined[joined[\"Year\"]>2014]\n",
     "    return joined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +66,13 @@
     "spain_joined.to_csv(\"transfers_output/spain_joined.csv\")\n",
     "england_joined.to_csv(\"transfers_output/england_joined.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
