--- a/mainanalysis.ipynb
+++ b/mainanalysis.ipynb
@@ -483,10 +483,12 @@
     "The average player rating in the top 3 leagues in Europe is around 72 on a scale of 100. This mesure comes from the fifa rating that mesures each player skill and summarise with on overall rating.\n",
     "With some expetions in 2015 and one in 2018 we observe that none of the top 4 teams have an overal rating below 75.\n",
     "\n",
-    "* Folowing this first observation we clearly see the impact of the player ranking and the player wage. So if we want to build a winning team knowing the needed average, we can prepare a wage budget. (or with or defined budget we can build or winning team). Notice that the are big differences with an average in the top 4 in Italy around 50k, 66k in Englang and 74k in Spain. The average for the 3 leagues is between 27k and 37k for England.\n",
+    "* Folowing this first observation we clearly see the better the player, the higher the wage and his value. So if we want to build a winning team knowing the needed average player ranking(75), we can prepare a team budget. (or with a defined budget we can try to build or winning team). Notice that the are big differences with an average in the top 4 in Italy around 50k, 66k in Englang and 74k in Spain. The average for the 3 leagues is between 27k and 37k for England.\n",
     "\n",
     "* The 2 other important variables are the number of scored goals and then the number of conceeded goals. There is also a clear gap between the previous seasons and the season 2019. The top 4 have an average goal between 48 and 50 where the average is around 34. And the top 4 conceeded between 18 and 21 goals where the average is between 27 and 29.\n",
     "we observe that a balanced decision is needed bit that the offensive players will have an bigger impact on the season's result.\n",
+    "\n",
+    "* Or last observation is that the age, height and wieght averages don't reaaly explain the ranking. We can't find a real pattern here. But we see that the average age, height and weight in the top 4 is respectvely around 25 year, 180cm and 75kg.\n",
     "\n",
     "\n"
    ]
@@ -495,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Recommendations]:\n"
+    "\n"
    ]
   }
  ]
