updating paths after directories loc changed

--- a/Diversity/zee_ethnicities.ipynb
+++ b/Diversity/zee_ethnicities.ipynb
@@ -24,9 +24,9 @@
    "outputs": [],
    "source": [
     "#importing rankings data \n",
-    "engrank_df = pd.read_csv(\"Team_player_data/cleaned/engranking.csv\")\n",
-    "itrank_df = pd.read_csv(\"Team_player_data/cleaned/itranking.csv\")\n",
-    "sprank_df = pd.read_csv(\"Team_player_data/cleaned/spainranking.csv\")"
+    "engrank_df = pd.read_csv(\"../Team_player_data/cleaned/engranking.csv\")\n",
+    "itrank_df = pd.read_csv(\"../Team_player_data/cleaned/itranking.csv\")\n",
+    "sprank_df = pd.read_csv(\"../Team_player_data/cleaned/spainranking.csv\")"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "players = []\n",
     "\n",
     "for number in numbers:\n",
-    "    players.append(pd.read_csv(f\"Team_player_data/raw/players_{number}.csv\"))\n",
+    "    players.append(pd.read_csv(f\"../Team_player_data/raw/players_{number}.csv\"))\n",
     "\n"
    ]
   },
